trunk/Archive2/35/b75fc7a7fc247b/output
main.cpp:2:19: error: expected class name
class Up : public UpParent
                  ^
main.cpp:10:5: error: unknown type name 'UpParent'
    UpParent getParent();
    ^
main.cpp:13:21: error: expected class name
class Down : public DownParent
                    ^
main.cpp:21:5: error: unknown type name 'DownParent'
    DownParent getParent();
    ^
main.cpp:36:23: error: use of undeclared identifier 'UpParent'
typedef AnywayYouLike<UpParent> Up;
                      ^
main.cpp:37:23: error: use of undeclared identifier 'DownParent'
typedef AnywayYouLike<DownParent> Down;
                      ^
6 errors generated.
